cleaned up broken/messy css

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ profiles/
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
+
+# temporary files vim makes
+*.swp
